--- a/CucumberAutomation/pom.xml
+++ b/CucumberAutomation/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
     		<groupId>org.junit.jupiter</groupId>
     		<artifactId>junit-jupiter-engine</artifactId>
-    		<version>5.0.0-M1</version>
+    		<version>5.0.0</version>
     		<scope>test</scope>
 		</dependency>
 		
@@ -40,6 +40,22 @@
     		<version>4.12</version>
     		<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+         <groupId>org.junit.platform</groupId>
+         <artifactId>junit-platform-runner</artifactId>
+         <version>1.0.0</version>
+         <scope>test</scope>
+      	</dependency>
+		
+		<dependency>
+         <groupId>org.junit.vintage</groupId>
+         <artifactId>junit-vintage-engine</artifactId>
+         <version>4.12.0</version>
+         <scope>test</scope>
+      	</dependency>
+		
+		
 		
 		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-picocontainer -->
 		<dependency>
@@ -98,7 +114,7 @@
   	  <plugin>
   	    <groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-compiler-plugin</artifactId>
-  			<version>3.0</version>
+  			<version>3.1</version>
   			<configuration>
   			<source>1.8</source>
   			<target>1.8</target>
@@ -107,16 +123,18 @@
   	  
   	  
 	<plugin>
-    	<artifactId>maven-surefire-plugin</artifactId>
-    	<version>2.19</version>
-    	<dependencies>
-        	<dependency>
-            	<groupId>org.junit.platform</groupId>
-            	<artifactId>junit-platform-surefire-provider</artifactId>
-            	<version>1.0.0</version>
-        	</dependency>
-    	</dependencies>
-	</plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.19</version>
+            <dependencies>
+               <dependency>
+                  <groupId>org.junit.platform</groupId>
+                  <artifactId>junit-platform-surefire-provider</artifactId>
+                  <version>1.0.0</version>
+               </dependency>
+ 
+ 
+            </dependencies>
+    </plugin>
   	 	  
   	</plugins>
  </build>
