--- a/CucumberAutomation/pom.xml
+++ b/CucumberAutomation/pom.xml
@@ -128,11 +128,11 @@
 	<plugin>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.19</version>
-            <!-- added configuration mappings -->
+            <!-- added configuration mappings for parallel running -->
             <configuration>
             	<parallel>classes</parallel>
             	<forkMode>perthread</forkMode>
-            	<threadCount>3</threadCount>
+            	<threadCount>1</threadCount>
             	<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
             	<includes>
             		<include>**/*Test.java</include>
