--- a/CucumberAutomation/pom.xml
+++ b/CucumberAutomation/pom.xml
@@ -130,14 +130,16 @@
             <version>2.19</version>
             <!-- added configuration mappings for parallel running -->
             <configuration>
-            	<!-- option for multi-thread without JVM 
             	<parallel>classes</parallel>
             	<forkMode>perthread</forkMode>
+            	<threadCount>6</threadCount>
+            	
+            	<!-- option for multi-thread separate JVM 
+            	<parallel>classes</parallel>
             	<threadCount>3</threadCount>
-            	-->
             	<forkCount>6</forkCount>
             	<reuseForks>true</reuseForks>
-            	
+            	-->
             	
             	
             	<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
